# wgsr

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
ci/: Dockerfile  binaries.sh  docker-images.sh  docker.sh  preamble.sh  test.sh
scripts/: docker.sh  test-local.sh  test.sh  wireguard.sh
src/: base64.rs  config.rs  config_parser.rs  error.rs  event_loop.rs  lib.rs  main.rs  message_ext.rs  proto.rs  rpc.rs  tests.rs  unix.rs
testnet/: Cargo.toml
testnet/src/: config.rs  context.rs  error.rs  ipc.rs  ipc_client.rs  ipc_message.rs  ipc_server.rs  ipc_state.rs  lib.rs  main.rs  netlink.rs  network.rs  pipe.rs  process.rs
testnet/tests/: net.rs
tests/: cli.rs  net.rs  wgproto.rs
tests/wgsrd/: mod.rs
tests/wgxd/: mod.rs
