[package]
name = "wgx"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
base64 = { version = "0.22.1", features = ["std", "alloc"], default-features = false }
bincode = { version = "2.0.0-rc.3", features = ["std", "serde", "derive"], default-features = false }
clap = { version = "4.5.16", features = ["std", "derive", "help", "usage"], default-features = false }
ctrlc = { version = "3.4.4", features = ["termination"], default-features = false }
human_bytes = { version = "0.4", default-features = false }
ipnet = "2.9.0"
libc = "0.2.156"
mio = { version = "1.0.1", features = ["net", "os-poll", "os-ext"], default-features = false }
network-interface = "2.0.0"
rand = { version = "0.8.5", features = [], default-features = false }
rand_core = { version = "0.6.4", features = ["getrandom"], default-features = false }
serde = "1.0.208"
static_assertions = "1.1.0"
wgproto = { version = "0.4.0", git = "https://github.com/igankevich/wgproto", tag = "0.4.0" }
x25519-dalek = { version = "2.0.1", features = ["serde"] }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
tempfile = "3.12.0"
test_bin = "0.4.0"
