[package]
name = "wgx"
version = "0.7.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
base64ct = { version = "1.6.0", features = ["std", "alloc"], default-features = false }
bincode = { version = "2.0.0-rc.3", features = ["std", "serde", "derive"], default-features = false }
clap = { version = "4.5.16", features = ["std", "derive", "help", "usage"], default-features = false }
colored = "2.1.0"
ctrlc = { version = "3.4.4", features = ["termination"], default-features = false }
ipnet = { version = "2.9.0", features = ["std"], default-features = false }
libc = "0.2.156"
log = { version = "0.4.22", features = [], default-features = false }
mio = { version = "1.0.1", features = ["net", "os-poll", "os-ext"], default-features = false }
network-interface = "2.0.0"
rand = { version = "0.8.5", features = [], default-features = false }
rand_core = { version = "0.6.4", features = ["getrandom"], default-features = false }
serde = "1.0.208"
static_assertions = { version = "1.1.0", features = [], default-features = false }
wgproto = { version = "0.4.1", tag = "0.4.1", git = "https://github.com/igankevich/wgproto" }
x25519-dalek = { version = "2.0.1", features = ["serde"] }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
tempfile = "3.12.0"
test_bin = "0.4.0"
