[package]
name = "testnet"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["std", "serde", "derive"], default-features = false }
clap = { version = "4.5.17", features = ["std", "derive", "help", "usage"], default-features = false }
ipnet = "2.9.0"
log = "0.4.22"
mio = { version = "1.0.1", features = ["net", "os-poll", "os-ext"], default-features = false }
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.20.1"
nix = { version = "0.29.0", features = ["sched", "process", "signal", "hostname", "user", "socket", "fs"], default-features = false }
